float_eq/tests/derive_tests/float_eq_all/float_eq_all_duplicate_tol.stderr
error: Expected only one Tol type name, previously saw `all_tol = "Tol1"`.
 --> $DIR/float_eq_all_duplicate_tol.rs:7:15
  |
7 |     all_tol = "Tol2"
  |               ^^^^^^
